# test-repo

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  coverage.xml  pyproject.toml  requirements.txt  setup.cfg  yamllint-config.yml
.github/workflows/: docker-publish.yml  ecr-publish.yml  precommit.yaml  release.yml  test.yaml
docs/: index.md
scripts/ci/: autoflake.sh  deploy.sh  lint.sh  mypy_lint.sh  test.sh
scripts/ci/pre_commit/: set_version.py
src/app/: __init__.py
src/app/cli/: main.py
tests/: test_basic_import.py
