[tool.poetry]
name = "test-repo"
version = "0.1.0"
description = ""
authors = ["Michael Statt <michael.statt@modelyst.io>"]
readme = "README.md"
packages = [{include = "test_repo"}]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
