[tool.poetry]
authors = ["Michael Statt <michael.statt@modelyst.io>"]
description = ""
name = "test-repo"
packages = [{include = "src/app"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"
rich = "^12.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
mypy = "^0.971"
pre-commit = "^2.20.0"
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
